synched remote with local

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/pages.css">
+    <link rel="stylesheet" href="assets/css/beranda.css">
 </head>
 <body>
     <header>
@@ -84,7 +84,7 @@
     <div class="gradient-circle gradient-bottom-right"></div>
 
     <section class="banner">
-        <img src="assets/images/placeholder-banner.png" alt="Banner" class="banner-bg">
+        <img src="assets/images/banner.jpeg" alt="Banner" class="banner-bg">
         <div class="banner-content">
             <div class="banner-left">
                 <h1>OSIS/MPK SMP TARUNA BAKTI</h1>
@@ -107,18 +107,67 @@
 
     <section id="misi">
         <h2>MISI</h2>
-        <p>1. Menumbuhkan karakter disiplin, tanggung jawab, dan kepemimpinan siswa sesuai nilai Pancasila dan 7 Landasan Mental SMP Taruna Bakti
-2. Menjadi jembatan aspirasi siswa dengan menciptakan ruang komunikasi yang terbuka, inklusif, dan kolaboratif
-3. Menyelenggarakan program kerja yang kreatif dan bermanfaat untuk mengembangkan minat, bakat, serta prestasi siswa baik akademik maupun non-akademik
-4. Mendorong budaya kebersamaan, gotong royong, dan kepedulian sosial melalui kegiatan internal maupun pengabdian masyarakat
-5. Menciptakan lingkungan sekolah yang aman, nyaman, dan inspiratif dengan kerja sama harmonis antara siswa, guru, dan seluruh warga sekolah</p>
+        <ul class="misi-list">
+            <li>
+                <h3 class="misi-card-title">Karakter & Kepemimpinan</h3>
+                <p class="misi-card-content">Menumbuhkan karakter disiplin, tanggung jawab, dan kepemimpinan siswa sesuai nilai Pancasila dan 7 Landasan Mental SMP Taruna Bakti</p>
+            </li>
+            <li>
+                <h3 class="misi-card-title">Jembatan Aspirasi</h3>
+                <p class="misi-card-content">Menjadi jembatan aspirasi siswa dengan menciptakan ruang komunikasi yang terbuka, inklusif, dan kolaboratif</p>
+            </li>
+            <li>
+                <h3 class="misi-card-title">Proker Kreatif</h3>
+                <p class="misi-card-content">Menyelenggarakan program kerja yang kreatif dan bermanfaat untuk mengembangkan minat, bakat, serta prestasi siswa baik akademik maupun non-akademik</p>
+            </li>
+            <li>
+                <h3 class="misi-card-title">Budaya Kebersamaan</h3>
+                <p class="misi-card-content">Mendorong budaya kebersamaan, gotong royong, dan kepedulian sosial melalui kegiatan internal maupun pengabdian masyarakat</p>
+            </li>
+            <li>
+                <h3 class="misi-card-title">Lingkungan Inspiratif</h3>
+                <p class="misi-card-content">Menciptakan lingkungan sekolah yang aman, nyaman, dan inspiratif dengan kerja sama harmonis antara siswa, guru, dan seluruh warga sekolah</p>
+            </li>
+        </ul>
     </section>
 
     <section id="proker">
         <h2>PROGRAM KERJA</h2>
-        <p>1. Owlcast - Interview yang membicarakan tentang pelajaran seperti tips belajar, pola belajar, dll. Lalu akan di posting di Youtube SMP Taruna Bakti.
-2. Heart2Heart – Bazaar kewirausahaan dengan 50% hasil penjualan disumbangkan ke yang membutuhkan
-3. Cleaning time competition - Lomba membersihkan kelas setiap sebulan sekali</p>
+        <p class="proker-intro">Program kerja unggulan OSIS/MPK SMP Taruna Bakti periode 2025-2026</p>
+        <div class="proker-grid">
+            <div class="proker-card">
+                <div class="proker-image">
+                    <img src="assets/images/proker-owlcast.jpg" alt="Owlcast">
+                    <div class="proker-number">01</div>
+                </div>
+                <div class="proker-content">
+                    <h3>Owlcast</h3>
+                    <p>Interview yang membicarakan tentang pelajaran seperti tips belajar, pola belajar, dll. Lalu akan di posting di Youtube SMP Taruna Bakti.</p>
+                </div>
+            </div>
+
+            <div class="proker-card">
+                <div class="proker-image">
+                    <img src="assets/images/proker-heart2heart.jpg" alt="Heart2Heart">
+                    <div class="proker-number">02</div>
+                </div>
+                <div class="proker-content">
+                    <h3>Heart2Heart</h3>
+                    <p>Bazaar kewirausahaan dengan 50% hasil penjualan disumbangkan ke yang membutuhkan.</p>
+                </div>
+            </div>
+
+            <div class="proker-card">
+                <div class="proker-image">
+                    <img src="assets/images/proker-cleaning.jpg" alt="Cleaning Time Competition">
+                    <div class="proker-number">03</div>
+                </div>
+                <div class="proker-content">
+                    <h3>Cleaning Time Competition</h3>
+                    <p>Lomba membersihkan kelas setiap sebulan sekali untuk menciptakan lingkungan belajar yang bersih dan nyaman.</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer class="footer">
