--- a/komisic.html
+++ b/komisic.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/pages.css">
+    <link rel="stylesheet" href="assets/css/struktur-organisasi.css">
 </head>
 <body>
     <header>
@@ -86,7 +86,7 @@
         <h1>KOMISI C</h1>
         <div class="struktur-organisasi-vertical">
             <div class="struktur-organisasi-horizontal">
-                <img src="assets/images/MPK/komisic-logo.png" alt="Logo Komisi C SMP Taruna Bakti">
+                <img class="struktur-organisasi-logo" src="assets/images/MPK/komisic-logo.png" alt="Logo Komisi C SMP Taruna Bakti">
                 <div class="struktur-organisasi-card">
                     <div class="struktur-organisasi-card-header">
                         <img src="assets/images/MPK/komisic/Diandra Alexa Tumewu - Ketua komisi C.png" alt="Student Photo">
