--- a/sekbid4.html
+++ b/sekbid4.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/pages.css">
+    <link rel="stylesheet" href="assets/css/struktur-organisasi.css">
 </head>
 <body>
     <header>
@@ -86,7 +86,7 @@
         <h1>SEKBID 4</h1>
         <div class="struktur-organisasi-vertical">
             <div class="struktur-organisasi-horizontal">
-                <img src="assets/images/OSIS/sekbid4-logo.png" alt="Logo Sekbid 4 SMP Taruna Bakti">
+                <img class="struktur-organisasi-logo" src="assets/images/OSIS/sekbid4-logo.png" alt="Logo Sekbid 4 SMP Taruna Bakti">
                 <div class="struktur-organisasi-card">
                     <div class="struktur-organisasi-card-header">
                         <img src="assets/images/OSIS/sekbid4/8D_Nadya Levana Putri Michael_Ketua Sekbid 4.jpg" alt="Student Photo">
