--- a/sekbid6.html
+++ b/sekbid6.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/pages.css">
+    <link rel="stylesheet" href="assets/css/struktur-organisasi.css">
 </head>
 <body>
     <header>
@@ -86,7 +86,7 @@
         <h1>SEKBID 6</h1>
         <div class="struktur-organisasi-vertical">
             <div class="struktur-organisasi-horizontal">
-                <img src="assets/images/OSIS/sekbid6-logo.png" alt="Logo Sekbid 6 SMP Taruna Bakti">
+                <img class="struktur-organisasi-logo" src="assets/images/OSIS/sekbid6-logo.png" alt="Logo Sekbid 6 SMP Taruna Bakti">
                 <div class="struktur-organisasi-card">
                     <div class="struktur-organisasi-card-header">
                         <img src="assets/images/OSIS/sekbid6/8F_Nindya Vaishali P.G._Ketua Sekbid 6.jpg" alt="Student Photo">
@@ -99,7 +99,7 @@
                 </div>
                 <div class="struktur-organisasi-card">
                     <div class="struktur-organisasi-card-header">
-                        <img src="assets/images/OSIS/sekbid6/" alt="Student Photo">
+                        <img src="assets/images/OSIS/sekbid6/vadya.jpg" alt="Student Photo">
                     </div>
                     <div class="struktur-organisasi-card-content">
                         <div class="struktur-organisasi-badge">Wakil Ketua Sekbid 6</div>
